--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,16 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
+    namespace "com.example.spacific" // Use your applicationId or package name
     compileSdk 34
 
     defaultConfig {
         applicationId "com.example.spacific"
-        minSdk 21
+        minSdk 23
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -38,11 +40,12 @@ android {
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion "1.5.3" // Latest Compose compiler version
+        kotlinCompilerExtensionVersion "1.5.3"
     }
 }
 
 dependencies {
+    // Compose and AndroidX libraries
     implementation "androidx.compose.ui:ui:1.5.1"
     implementation "androidx.compose.material3:material3:1.1.0"
     implementation "androidx.activity:activity-compose:1.7.2"
@@ -54,8 +57,19 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.7.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.7.1'
     implementation "androidx.compose.ui:ui-tooling-preview:1.5.1"
-    implementation 'androidx.activity:activity:1.9.3'
+    implementation 'com.google.firebase:firebase-firestore-ktx:25.1.1'
+    implementation 'com.google.firebase:firebase-storage-ktx:21.0.1'
     debugImplementation "androidx.compose.ui:ui-tooling:1.5.1"
+    implementation 'androidx.activity:activity:1.9.3'
+
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:33.6.0')
+    implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+
+    // Testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
